# LMSSPP

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-push-ghcr.yml
deploy/iframe_app/: Dockerfile  README.md  app.py
deploy/iframe_app/static/: config.json  index.html
deploy/voila/: README.md  slots.json
deploy/voila/slots/: 0.ipynb  1.ipynb  10.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb
exports/widget_snapshots/: LMSBall3DEntropyShellEnsembleWidget_20260306_105027.html  LMSBall3DEntropyShellTwoSheetWidget_20260308_011409.html  LMSBall4DWidget_20260306_130228.html  LMSBall4DWidget_20260306_133644.html  LMSBall4DWidget_20260306_163329.html  LMSBall4DWidget_20260306_163736.html  LMSBall4DWidget_20260308_011513.html
exports/widget_snapshots/lms_ball3d_max_energy_constant_energy_s400_20260326_043703/: manifest.json  (+1 more)
notebooks/: LMSSPP_colab_live_backup.ipynb  bridge.ipynb  hyperbolic_kuramoto_mobius.ipynb  lipton-strogatz-v1.ipynb  new_CS.ipynb  new_LMS.ipynb
notebooks/docs/: IFRAME_EXPORT_README.md  effective_poisson_vs_cs_mollifier.md  justifications_for_implementation.md  lms_low_entropy_note.md  poisson_to_cs_bridge.md
papers/: CUCKER_SMALE_IMPLEMENTATION_NOTES.md  LMS.tex  LMS_FREE_ENERGY_INITIALIZATION_NOTE.md  LMS_IMPLEMENTATION_NOTES.md
scripts/: bootstrap_bundle.py  run_live_ngrok.py
src/lmsspp/: CuckerSmale.py  LMS.py  __init__.py  cucker_smale_ball3d_widget.py  lms_ball3d_widget.py  lms_ball4d_widget.py  lms_iframe_export.py  lms_plotly_widget.py  simpler_lms_ball3d_widget.py
(+16 files in other folders)
